# steno-dojo

./: KEYBOARDS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
plover-plugin/: README.md  setup.cfg
plover-plugin/plover_steno_dojo/: __init__.py  server.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConnectionStatus.tsx  Onboarding.tsx  PluginVersionBanner.tsx  PracticeMode.tsx  RaceTrack.tsx  Settings.tsx  StenoKeyboard.tsx  TestMode.tsx  WindowControls.tsx
src/config/: versions.ts
src/data/: sentences.ts
src/hooks/: usePlover.ts  usePluginVersionCheck.ts  useSteno.ts
src/keyboards/: ecosteno.json  geminipr.json  index.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: openLink.ts
