[metadata]
name = plover-steno-dojo
version = 0.1.2
description = WebSocket server plugin for Steno Dojo — broadcasts strokes to the Steno Dojo app
long_description = file: README.md
long_description_content_type = text/markdown
author = Steno Dojo
license = MIT
url = https://github.com/stenodojo/plover-steno-dojo
keywords = plover_plugin
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = plover_steno_dojo
python_requires = >=3.9

[options.entry_points]
plover.extension =
    steno_dojo = plover_steno_dojo.server:StenoDojo
